# avantgarde

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRACTS.md  QUESTIONS.md  ROADMAP_v0.1.md  UI_ARCHITECTURE.md  main.cpp
src/contracts/: CMakeLists.txt  FxRegistry.h  IAudioEngine.h  IAudioGraph.h  IAudioModule.h  IAudioRecorder.h  IClipTrack.h  IControlHandler.h  IControlSurface.h  IDisplay.h  IEventBus.h  IGraphCodec.h  IModuleFactory.h  IParamBridge.h  IParameterized.h  IPattern.h  IPlatform.h  IProjectStore.h  IRtCommandQueue.h  IRtExtension.h  ISamplePreviewEngine.h  ISequencer.h  ISnapshotable.h  ITrack.h  ITransport.h  ITransportBridge.h  IUi.h  IUiGestureInput.h  IUiInput.h  IUiWidget.h  UiAction.h  UiIntent.h  UiLayout.h  UiNavState.h  UiPreparedLayout.h  UiScene.h  UiTheme.h  graph_types.h  ids.h  types.h
src/contracts/ui/components/: UiComponents.h
src/control/: CMakeLists.txt  ControlCommandDispatcher.cpp  ControlCommandDispatcher.h  TerminalUiInput.cpp  TerminalUiInput.h
src/module/: BufferFxModule.cpp  BufferFxModule.h  CMakeLists.txt  GainSlewModule.cpp  GlitchVoice.cpp  GlitchVoice.h  OnePoleHPFModule.cpp  PhraseCapture.cpp  PhraseCapture.h  SchroederReverbModule.cpp  SchroederReverbModule.h  StutterModule.cpp  StutterModule.h  SuperGlitchModule.cpp  SuperGlitchModule.h
src/platform/: AudioHostFactoryFallback.cpp  CMakeLists.txt
src/platform/linux/: AlsaAudioHost.cpp
src/platform/lowres/: LowResUiRenderer.cpp  LowResUiRenderer.h
src/platform/macos/: MacAudioHost.mm  MacGbWindowRenderer.h  MacGbWindowRenderer.mm  MacPrimitiveInputMapper.h  MacPrimitiveInputMapper.mm  MacPrimitiveScenePainter.h  MacPrimitiveScenePainter.mm  MacPrimitiveWindowInput.h  MacPrimitiveWindowInput.mm  MacPrimitiveWindowRenderer.h  MacPrimitiveWindowRenderer.mm
src/platform/raspi/: RpiPixelCanvas.cpp  RpiPixelCanvas.h  RpiPrimitiveInputMapper.cpp  RpiPrimitiveInputMapper.h  RpiPrimitiveScenePainter.cpp  RpiPrimitiveScenePainter.h  RpiPrimitiveWindowInput.cpp  RpiPrimitiveWindowInput.h  RpiPrimitiveWindowRenderer.cpp  RpiPrimitiveWindowRenderer.h  RpiUiConfig.h  RpiUiWrapper.cpp  RpiUiWrapper.h
src/platform/render/: ColorFilterVisualFx.cpp  ColorFilterVisualFx.h  GlitchVisualFx.cpp  GlitchVisualFx.h  GlowVisualFx.cpp  GlowVisualFx.h  IVisualFx.h  PreparedLayoutUtils.cpp  PreparedLayoutUtils.h  RenderGeometry.cpp  RenderGeometry.h  TextSliceGeometry.cpp  TextSliceGeometry.h  TypingVisualFx.cpp  TypingVisualFx.h  VisualFxProcessor.cpp  VisualFxProcessor.h
src/platform/terminal/: AnsiUiRenderer.cpp  AnsiUiRenderer.h  GothicGbUiRenderer.cpp  GothicGbUiRenderer.h  TerminalCharDisplay.cpp  TerminalCharDisplay.h
src/runtime/: AudioEngine.cpp  Avantgarde_AudioEngine_ClipTrack_Flow.md  CMakeLists.txt  ClipTrack.cpp  IParamBridge.md  MetronomeRtExtension.cpp  MetronomeRtExtension.h  ParamBridgeDualBuffer.cpp  PatternSchedulerRtExtension.cpp  PatternSchedulerRtExtension.h  QuantizedSchedulerRtExtension.cpp  QuantizedSchedulerRtExtension.h  RtCommandQueueSPSC.cpp  SamplePreviewEngine.cpp  TransportBridgeDualBuffer.cpp  TransportBridgeDualBuffer.h
src/service/: CMakeLists.txt  UiStateComposer.cpp  UiStateComposer.h  UiStateStore.cpp  UiStateStore.h
src/service/audio/: BpmDetectorService.cpp  BpmDetectorService.h
src/service/pattern/: ClipBufferPool.cpp  ClipBufferPool.h  PatternBank.cpp  PatternBank.h  PatternEngine.cpp  PatternEngine.h  PatternScheduler.cpp  PatternScheduler.h  PatternSnapshotBuilder.cpp  PatternSnapshotBuilder.h  PatternSnapshotManager.cpp  PatternSnapshotManager.h  PatternSnapshotOrchestrator.cpp  PatternSnapshotOrchestrator.h  PatternSwitchPlanApplier.cpp  PatternSwitchPlanApplier.h
src/service/sequencer/: AutomationLane.cpp  AutomationLane.h  EventLane.cpp  EventLane.h  SequencerDispatchPlanner.cpp  SequencerDispatchPlanner.h  SequencerRecordRegistry.cpp  SequencerRecordRegistry.h  SmoothedValue.h
src/service/snapshot/: SnapshotManager.cpp  SnapshotManager.h
src/service/track/: TrackFeatureResolver.cpp  TrackFeatureResolver.h
src/service/ui/: FxEditorWidget.cpp  FxEditorWidget.h  FxListWidget.cpp  FxListWidget.h  GbFrameComposer.cpp  GbFrameComposer.h  ManagerWidget.cpp  ManagerWidget.h  TrackContextMenuWidget.cpp  TrackContextMenuWidget.h  TracksWidget.cpp  TracksWidget.h  UiBindNormalizer.cpp  UiBindNormalizer.h  UiBindParser.cpp  UiBindParser.h  UiBindRegistry.cpp  UiBindRegistry.h  UiBindResolver.cpp  UiBindResolver.h  UiBindTypes.h  UiCapabilityService.cpp  UiCapabilityService.h  UiKnobComposer.cpp  UiKnobComposer.h  UiLayoutJsonLoader.cpp  UiLayoutJsonLoader.h  UiLayoutTomlLoader.cpp  UiLayoutTomlLoader.h  UiSceneHost.cpp  UiSceneHost.h  UiTargetResolver.cpp  UiTargetResolver.h  UiTokenResolver.cpp  UiTokenResolver.h  UiWidgetFactory.cpp  UiWidgetFactory.h
src/service/ui/hud/: HudNotificationsLayer.cpp  HudNotificationsLayer.h
src/service/ui/input/: PressPolicyResolver.cpp  (+3 more)
test/: AudioEngineTests.cpp  AutomationLaneTests.cpp  BpmDetectorServiceTests.cpp  BufferFxModuleTests.cpp  CMakeLists.txt  ClipBufferPoolTests.cpp  ClipTrackTests.cpp  ControlCommandDispatcherTests.cpp  EngineLayerArchitectureTests.cpp  EngineRtQueueQuantizationTests.cpp  EventLaneTests.cpp  FxEditorTargetRoutingTests.cpp  FxRegistryTests.cpp  FxWidgetsTests.cpp  GainSlewModuleTests.cpp  GothicGbUiRendererTests.cpp  HistoryTransactionManagerTests.cpp  HudNotificationsLayerTests.cpp  LayoutDrivenWidgetsTests.cpp  LowResUiRendererTests.cpp  OnePoleHPFModuleTests.cpp  ParamBridgeDualBufferTests.cpp  PatternBankTests.cpp  PatternEngineTests.cpp  PatternSchedulerTests.cpp  PatternSnapshotBuilderTests.cpp  PatternSnapshotManagerTests.cpp  PatternSwitchPlanApplierTests.cpp  PatternUiSyncRegressionTests.cpp  PreparedLayoutUtilsTests.cpp  QuantizedSchedulerRtExtensionTests.cpp  RenderGeometryTests.cpp  RtCommandQueueSPSCTests.cpp  SampleEditWidgetTests.cpp  SampleWidgetContextMenuWidgetTests.cpp  SceneFrameAsciiRendererTests.cpp  SchedulerEngineIntegrationTests.cpp  SchroederReverbModuleTests.cpp  SequencerDispatchPlannerTests.cpp  SequencerRecordRegistryTests.cpp  (+24 more)
(+88 files in other folders)
